--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.52MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.24MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.70MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-5.97MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.96MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-872.7KB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-477.1KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇭🇰 香港-1.89MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-325.9KB/s(Youtube:不良林), server: 2.game.speed.zz.001.oooooooooo.icu, port: 53945, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.53MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.24MB/s(Youtube:不良林), server: 2.hk.zz.xxxxx.x-t-fuckword.network, port: 35419, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.78MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 195.12.49.82, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 149.202.82.172, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇬🇧 英国-1.69MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-872.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-477.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-310.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
