--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.26MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: word.2.fuckword.club, port: 36678, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: us2.v3.zz.cn.fuckword.club, port: 58420, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.34MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.27MB/s(Youtube:不良林), server: 1.tw.zz.xxxxx.x-t-fuckword.network, port: 53137, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: word.2.fuckword.club, port: 47831, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: word.14.1.fuckword.club, port: 48861, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.53MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: us1.lolvps.xyz, port: 60070, type: vmess, uuid: 95886c76-9207-48bd-9e64-d1422e75ad89, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /AY920UMR, ws-headers: {Host: us1.lolvps.xyz}}
-  - {name: 🇨🇳 中国-8.85MB/s(Youtube:不良林), server: 5.hk.zz.xxxxx.x-t-fuckword.network, port: 36690, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.96MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: word.2.fuckword.club, port: 47831, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.13MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: word.2.fuckword.club, port: 36678, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.75MB/s(Youtube:不良林), server: 4.3.1.fuckppppp.today, port: 58418, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.90MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
