--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.96MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: word.2.fuckword.club, port: 47831, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.13MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: word.2.fuckword.club, port: 36678, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.75MB/s(Youtube:不良林), server: 4.3.1.fuckppppp.today, port: 58418, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.64MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-611.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-9.90MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.90MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.66MB/s(Youtube:不良林), server: 195.12.49.82, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-495.4KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇬🇧 英国-1.49MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
