--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.64MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-611.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-9.90MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.66MB/s(Youtube:不良林), server: 195.12.49.82, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-495.4KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇬🇧 英国-1.49MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 台湾-844.5KB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-302.9KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.26MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.43MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-387.8KB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.64MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-611.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-495.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
